--- a/apps/demo-api/package.json
+++ b/apps/demo-api/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ip": "^1.1.5",
+    "lorem-ipsum": "^2.0.3",
     "uuid": "^8.2.0"
   },
   "scripts": {
