added healthcheck endpoint

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -14,17 +14,17 @@ spec:
             backend:
               serviceName: demo-api-service-dev
               servicePort: 80
-    - host: demo-api.staging.awesomeweb.app
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: demo-api-service-staging
-              servicePort: 80
-    - host: demo-api.prod.awesomeweb.app
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: demo-api-service-prod
-              servicePort: 80
+#    - host: demo-api.staging.awesomeweb.app
+#      http:
+#        paths:
+#          - path: /
+#            backend:
+#              serviceName: demo-api-service-staging
+#              servicePort: 80
+#    - host: demo-api.prod.awesomeweb.app
+#      http:
+#        paths:
+#          - path: /
+#            backend:
+#              serviceName: demo-api-service-prod
+#              servicePort: 80
