--- a/dev/demo-api.yaml
+++ b/dev/demo-api.yaml
@@ -6,7 +6,12 @@ spec:
   selector:
     matchLabels:
       app: demo-api-dev
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
