--- a/staging/demo-api.yaml
+++ b/staging/demo-api.yaml
@@ -7,6 +7,11 @@ spec:
     matchLabels:
       app: demo-api-staging
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
