--- a/apps/demo-api/package.json
+++ b/apps/demo-api/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "lorem-ipsum": "^2.0.3",
+    "morgan": "^1.10.0",
     "uuid": "^8.2.0"
   },
   "scripts": {
