--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,7 +3,6 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
@@ -14,17 +13,17 @@ spec:
             backend:
               serviceName: demo-api-service-dev
               servicePort: 80
-#    - host: demo-api.staging.awesomeweb.app
-#      http:
-#        paths:
-#          - path: /
-#            backend:
-#              serviceName: demo-api-service-staging
-#              servicePort: 80
-#    - host: demo-api.prod.awesomeweb.app
-#      http:
-#        paths:
-#          - path: /
-#            backend:
-#              serviceName: demo-api-service-prod
-#              servicePort: 80
+    - host: demo-api.staging.awesomeweb.app
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: demo-api-service-staging
+              servicePort: 80
+    - host: demo-api.prod.awesomeweb.app
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: demo-api-service-prod
+              servicePort: 80
