--- a/dev/demo-api.yaml
+++ b/dev/demo-api.yaml
@@ -31,6 +31,18 @@ spec:
               value: dev
           ports:
             - containerPort: 3000
+          livenessProbe:
+            httpGet:
+              path: /healthcheck
+              port: 3000
+            initialDelaySeconds: 2
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthcheck
+              port: 3000
+            initialDelaySeconds: 2
+            periodSeconds: 10
 ---
 
 apiVersion: v1
